refactor: Change POST method of Likes in PostPage Handler

--- a/templates/post.html
+++ b/templates/post.html
@@ -43,7 +43,9 @@
 				</form>
 	  			{% endif %}
   			{% endif %}
-
+  			<br>
+  			<h3>{{error}}</h3>
+  			<br>
 	  		{% if post.author.name == user.name %}
 	  		<!-- if user is also the post author -->
 	  		<div class="txt-right">
